sources/scripts/study/k8s/manifest/00.python-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  namespace: s
  name: python
  labels:
    app: python
spec: 
  containers: 
  - image: python:latest
    name: python
    imagePullPolicy: IfNotPresent
    command: ["sleep","infinity"]
