sources/scripts/study/k8s/manifest/10.kubia-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  namespace: s
  name: kubia
  labels: 
    app: kubia
spec: 
  replicas: 3
  selector: 
    matchLabels: 
      app: kubia
  template: 
    metadata: 
      labels: 
        app: kubia
    spec: 
      containers: 
      - name: kubia
        image: luksa/kubia
