sources/scripts/study/k8s/manifest/helloworld-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  namespace: s
  name: hello-world
  labels:
    app: hello-world
spec: 
  replicas: 1
  selector:
    matchLabels:
      app: hello-world
  template: 
    metadata: 
      labels: 
        app: hello-world
    spec: 
      containers: 
      - image: hello-world:latest
        name: hello-world
