sources/scripts/study/k8s/manifest/kubia-daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata: 
  namespace: s
  name: ssd-monitor
spec: 
  selector:
    matchLabels:
      app: ssd-monitor
  template: 
    metadata: 
      labels: 
        app: ssd-monitor
    spec: 
      nodeSelector:
        disk: ssd
      containers: 
      - image: luksa/ssd-monitor
        name: ssd-monitor
