sources/scripts/study/k8s/manifest/nginx-deployment-one.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: s
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        livenessProbe:
            httpGet:
              path: /
              port: 80
        image: nginx:1.7.9
        ports:
        - containerPort: 80
