sources/scripts/study/k8s/manifest/05.nginx-service.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: s
  name: nginx
spec: 
  ports: 
  - port: 80
    targetPort: 80
  selector: 
    app: nginx
