sources/scripts/study/k8s/manifest/06.nginx-nodeport.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: s
  name: nginx-nodeport
spec: 
  type: NodePort
  ports: 
  - port: 80
    name: nginx-nodeport
    targetPort: 80
    nodePort: 30080
  selector: 
    app: nginx
