sources/scripts/study/k8s/manifest/all-nodeport.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: s
  name: nginx-kubia-nodeport
spec: 
  type: NodePort
  ports: 
  - port: 80
    name: nginx-kubia-nodeport-nginx
    targetPort: 80
    nodePort: 30080
  - port: 81
    name: nginx-kubia-nodeport-kubia
    targetPort: 8080
    nodePort: 30081
  selector: 
    app: nginx-kubia
