sources/scripts/study/k8s/manifest/all-service.yaml
apiVersion: v1
kind: Service
metadata: 
  namespace: s
  name: nginx-kubia-http
spec: 
  ports: 
  - port: 80
    name: nginx
    targetPort: 80
  - port: 81
    name: kubia
    targetPort: 8080
  selector: 
    app: nginx-kubia
